--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest-cov = "^2.12.1"
 pytest-mock = "^3.6.1"
 pylint = "^2.11.1"
 mypy = "^0.910"
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
