--- a/.pylintrc
+++ b/.pylintrc
@@ -145,7 +145,9 @@ disable=print-statement,
         logging-fstring-interpolation,
         invalid-name,
         no-self-use,
-        bad-continuation
+        bad-continuation,
+        too-many-arguments,
+        too-few-public-methods
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
